some naming, here and there

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gottis"
+name = "sip-rs"
 version = "0.1.0"
 edition = "2024"
 
@@ -7,5 +7,5 @@ edition = "2024"
 base58 = "0.2.0"
 borsh = { version = "1.6.0", features = ["derive"] }
 serde = { version = "1.0.228", features = ["derive"] }
-solana-pubkey = "=2.1.1"
-solana-transaction = "3.0.2"
+solana-pubkey = "3.0.0"
+solana-transaction = "3.0.0"
