macros! pretty awesome

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "sip-rs"
+name = "sips"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-base58 = "0.2.0"
 borsh = { version = "1.6.0", features = ["derive"] }
 serde = { version = "1.0.228", features = ["derive"] }
-solana-pubkey = "3.0.0"
-solana-transaction = "3.0.0"
+
+ix_macros ={ path = "ix_macros"}
+
+[features]
+pump = []
