--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 borsh = { version = "1.6.0", features = ["derive"] }
 
-ix_macros ={ path = "ix_macros"}
+ix_macros ={ path = "ix_macros", version = "*"}
 
 [features]
 pump = []
