--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [dependencies]
 borsh = { version = "1.6.0", features = ["derive"] }
+five8_const = "1.0.0"
 ix_macros ={ path = "./ix_macros", version = "0.1.0"}
 
 [features]
